[package]
name = "rust-sitter-benchmarking"
version = "0.4.4"
authors = ["Shadaj Laddad <shadaj@users.noreply.github.com>"]
edition = "2021"
publish = false

[features]
default = ["tree-sitter-c2rust"]
tree-sitter-c2rust = ["rust-sitter/tree-sitter-c2rust"]
tree-sitter-standard = ["rust-sitter/tree-sitter-standard"]

[dependencies]
rust-sitter = { path = "../runtime", default-features = false }
rand = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
rust-sitter-tool = { path = "../tool" }

[[bench]]
name = "arena_benchmark"
harness = false