[package]
name = "rust-sitter-common"
description = "Shared logic for the Rust Sitter macro and tool"
readme = "../README.md"
repository = "https://github.com/hydro-project/rust-sitter"
version = "0.2.1"
authors = ["Shadaj Laddad <shadaj@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
syn = { version = "1.0", features = [ "full", "extra-traits" ] }
quote = "1.0"
