[package]
name = "rust-sitter_example"
version = "0.1.0"
authors = ["Shadaj Laddad <shadaj@users.noreply.github.com>"]
edition = "2021"
publish = false

[dependencies]
rust-sitter = { path = "../runtime" }
codemap = "0.1.3"
codemap-diagnostic = "0.1.1"

[build-dependencies]
rust-sitter-tool = { path = "../tool" }

[dev-dependencies]
insta = "1.7.1"
