[package]
name = "rust-sitter-example"
version = "0.3.1"
authors = ["Shadaj Laddad <shadaj@users.noreply.github.com>"]
edition = "2021"
publish = false

[features]
default = ["tree-sitter-c2rust"]
tree-sitter-c2rust = ["rust-sitter/tree-sitter-c2rust"]
tree-sitter-standard = ["rust-sitter/tree-sitter-standard"]

[dependencies]
rust-sitter = { path = "../runtime", default-features = false }
codemap = "0.1.3"
codemap-diagnostic = "0.1.1"

[build-dependencies]
rust-sitter-tool = { path = "../tool" }

[dev-dependencies]
insta = "1.7.1"
