[package]
name = "rust-sitter-macro"
description = "Procedural macros for Rust Sitter"
readme = "../README.md"
repository = "https://github.com/hydro-project/rust-sitter"
version = "0.4.1"
authors = ["Shadaj Laddad <shadaj@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "1.0", features = [ "full", "extra-traits" ] }
quote = "1.0"
proc-macro2 = "1.0.67"
rust-sitter-common = { version= "0.4.1", path = "../common" }

[dev-dependencies]
insta = "1.7.1"
tempfile = "3.2.0"
