[package]
name = "rust-sitter-macro"
description = "Procedural macros for Rust Sitter"
readme = "../README.md"
repository = "https://github.com/hydro-project/rust-sitter"
version = "0.4.3"
authors = ["Shadaj Laddad <shadaj@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "2", features = [ "full", "extra-traits" ] }
quote = "1"
proc-macro2 = "1"
rust-sitter-common = { version= "0.4.3", path = "../common" }

[dev-dependencies]
insta = "1.39"
tempfile = "3"
