[package]
name = "rust-sitter"
description = "A package for defining tree-sitter grammars alongside Rust logic"
readme = "../README.md"
repository = "https://github.com/hydro-project/rust-sitter"
version = "0.2.0"
authors = ["Shadaj Laddad <shadaj@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[features]
default = ["tree-sitter-c2rust"]
tree-sitter-c2rust = ["tree-sitter-runtime-c2rust"]
tree-sitter-standard = ["tree-sitter-runtime-standard"]

[dependencies]
tree-sitter-runtime-c2rust = { package = "tree-sitter-c2rust", version = "0.20.9", optional = true }
tree-sitter-runtime-standard = { package = "tree-sitter", version = "0.20.9", optional = true }
rust-sitter-macro = { version = "0.2.0", path = "../macro" }

[dev-dependencies]
insta = "1.7.1"
tempfile = "3.2.0"
