[package]
name = "rust-sitter"
description = "A package for defining tree-sitter grammars alongside Rust logic"
readme = "../README.md"
repository = "https://github.com/hydro-project/rust-sitter"
version = "0.4.4"
authors = ["Shadaj Laddad <shadaj@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[features]
default = ["tree-sitter-c2rust"]
tree-sitter-c2rust = ["tree-sitter-runtime-c2rust"]
tree-sitter-standard = ["tree-sitter-runtime-standard"]

[dependencies]
tree-sitter-runtime-c2rust = { package = "tree-sitter-c2rust", version = "0.25.2", optional = true }
tree-sitter-runtime-standard = { package = "tree-sitter", version = "0.25.2", optional = true }
rust-sitter-macro = { version = "0.4.4", path = "../macro" }

[dev-dependencies]
insta = "1.39"
tempfile = "3.2.0"
