[package]
name = "rust-sitter-tool"
description = "The external tool for Rust Sitter that extracts grammars from Rust definitions"
readme = "../README.md"
repository = "https://github.com/hydro-project/rust-sitter"
version = "0.3.2"
authors = ["Shadaj Laddad <shadaj@users.noreply.github.com>"]
license = "MIT"
edition = "2021"
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[features]
default = ["build_parsers"]
build_parsers = ["dep:tempfile", "dep:tree-sitter", "dep:tree-sitter-cli", "dep:cc"]

[dependencies]
syn = { version = "1.0", features = [ "full", "extra-traits" ] }
syn-inline-mod = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rust-sitter-common = { version = "0.3.2", path = "../common" }

tempfile = { version = "3.0.0", optional = true }
tree-sitter = { package = "tree-sitter", version = "0.20.9", optional = true }
tree-sitter-cli = { package = "tree-sitter-cli", version = "0.20.7", optional = true }
cc = { version = "1.0.73", optional = true }

[dev-dependencies]
insta = "1.7.1"
